--- a/src/main/resources/org/jenkinsci/plugins/koji/KojiBuilder/help-kojiInstanceURL.html
+++ b/src/main/resources/org/jenkinsci/plugins/koji/KojiBuilder/help-kojiInstanceURL.html
@@ -1,6 +1,3 @@
 <div>
-  This HTML fragment will be injected into the configuration screen
-  when the user clicks the 'help' icon. See global.jelly for how the
-  form decides which page to load.
-  You can have any <tt>HTML</tt> fragment here.
+  URL of the XML-RPC Koji Hub that will be used to handle requests.
 </div>
